# FastAPI-ML-Demo

./: .gitignore  README.md  inference_check.ipynb  main.py  pyproject.toml
artifacts/: feature_metadata.json  housing_regression_v1.joblib
docs/: fastapi_ml_model_to_api_overview.md
docs/01_architecture/: project_structure.md
notebooks/: 00_baseline.ipynb  01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  06_inference_explanation.ipynb
scripts/: create_dataset.py
src/fastapi_ml_demo/: main.py
src/fastapi_ml_demo/core/: inference.py
src/fastapi_ml_demo/schemas/: prediction.py
